--- a/views/addBreed.html
+++ b/views/addBreed.html
@@ -22,7 +22,7 @@
         <form action="/cats/add-breed" method="POST" class="cat-form">
             <h2>Add Cat Breed</h2>
             <label for="breed-name">Breed Name</label>
-            <input name="breed" type="text" id="breed-name">
+            <input name="breed" type="text" id="breed-name" style="border:3px double black" required>
             <button type="submit">Add Breed</button>
         </form>
 </body>
