--- a/views/addCat.html
+++ b/views/addCat.html
@@ -22,13 +22,13 @@
         <form action="/cats/add-cat" method="POST" class="cat-form" enctype="multipart/form-data">
             <h2>Add Cat</h2>
             <label for="name">Name</label>
-            <input name="name" type="text" id="name">
+            <input name="name" type="text" id="name" style="border:3px double black" required>
             <label for="description">Description</label>
-            <textarea name="description" id="description"></textarea>
+            <textarea name="description" id="description" style="border:3px double black" required></textarea>
             <label for="image">Image</label>
-            <input name="upload" type="file" id="image">
+            <input name="upload" type="file" id="image" style="border:3px double black" required>
             <label for="group">Breed</label>
-            <select name="breed" id="group">
+            <select name="breed" id="group" style="border:3px double black" required>
                 <!-- render my cat breeds here -->
                 {{catBreeds}}
             </select>
