--- a/views/editCat.html
+++ b/views/editCat.html
@@ -12,9 +12,9 @@
     <header>
         <nav>
             <ul class="navigation">
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/cats/add-breed">Add Breed</a></li>
-                <li><a href="/cats/add-cat">Add Cat</a></li>
+              <li><a href="/">Home Page</a></li>
+              <li><a href="/cats/add-breed">Add Breed</a></li>
+              <li><a href="/cats/add-cat">Add Cat</a></li>
             </ul>
         </nav>
         <h1>Cat Shelter</h1>
@@ -22,16 +22,16 @@
         <form action="/cats-edit/{{id}}" class="cat-form" enctype="multipart/form-data">
             <h2>Edit Cat</h2>
             <label for="name">Name</label>
-            <input type="text" id="name" value="{{name}}" style="border:3px double black">
+            <input type="text" id="name" value="{{name}}">
             <label for="description">Description</label>
             <textarea id="description">{{description}}</textarea>
             <label for="image">Image</label>
             <input type="file" id="image">
             <label for="group">Breed</label>
-            <select id="group">
+            <select name="breed" id="group">
                 {{catBreeds}}
             </select>
-            <button>Edit Cat</button>
+            <button type="submit">Edit Cat</button>
         </form>
 </body>
 </html>
