--- a/views/home/index.html
+++ b/views/home/index.html
@@ -13,10 +13,10 @@
     <header>
         <nav>
             <ul class="navigation">
-                <li><a href="/">Home Page</a></li>
+                <li><a href="">Home Page</a></li>
                 <li><a href="/cats/add-breed">Add Breed</a></li>
                 <li><a href="/cats/add-cat">Add Cat</a></li>
-            </ul>
+            </ul> 
         </nav>
         <h1>Cat Shelter</h1>
         <form action="/search">
@@ -30,7 +30,7 @@
             <ul>
                 <li>
 					<img src="https://cdn.pixabay.com/photo/2015/03/27/13/16/cat-694730_1280.jpg" alt="Black Cat">
-					<h3>Cat with no name</h3>
+					<h3>Cat with No Name </h3>
 					<p><span>Breed: </span>Bombay Cat</p>
 					<p><span>Description: </span>Dominant and aggressive to other cats. Will probably eat you in your sleep. Very cute tho.</p>
 					<ul class="buttons">
@@ -39,17 +39,6 @@
 					</ul>
                 </li>
                 {{cats}}
-                <li>
-                    <img src="https://cdn.pixabay.com/photo/2017/02/20/18/03/cat-2083492_1280.jpg" alt="Black Cat">
-                    <h3>Pretty Kitty</h3>
-                    <p><span>Price: </span>350$</p>
-                    <p><span>Breed: </span>Bombay Cat</p>
-                    <p><span>Description: </span>Dominant and aggressive to other cats. Will probably eat you in your sleep. Very cute tho.</p>
-                    <ul class="buttons">
-						<li class="btn edit"><a href="">Change Info</a></li>
-						<li class="btn delete"><a href="">New Home</a></li>
-					</ul>
-                </li>
                 <li>
                     <img src="https://cdn.pixabay.com/photo/2014/04/13/20/49/cat-323262_1280.jpg" alt="Black Cat">
                     <h3>Pretty Kitty</h3>
