--- a/views/catShelter.html
+++ b/views/catShelter.html
@@ -19,7 +19,7 @@
         </nav>
         <h1>Cat Shelter</h1>
     </header>
-        <form action="#" class="cat-form">
+        <!-- <form action="#" class="cat-form">
             <h2>Shelter the cat</h2>
             <img src="https://cdn.pixabay.com/photo/2015/03/27/13/16/cat-694730_1280.jpg" alt="">
             <label for="name">Name</label>
@@ -31,6 +31,7 @@
                 <option value="Fluffy Cat">Fluffy Cat</option>
             </select>
             <button>SHELTER THE CAT</button>
-        </form>
+        </form> -->
+        {{shelterCat}}
 </body>
 </html>
