--- a/views/editCat.html
+++ b/views/editCat.html
@@ -19,7 +19,7 @@
         </nav>
         <h1>Cat Shelter</h1>
     </header>
-        <form action="/cats-edit/{{id}}" class="cat-form" enctype="multipart/form-data">
+        <!-- <form action="/cats-edit/{{id}}" method="POST" class="cat-form" enctype="multipart/form-data">
             <h2>Edit Cat</h2>
             <label for="name">Name</label>
             <input type="text" id="name" value="{{name}}">
@@ -32,6 +32,7 @@
                 {{catBreeds}}
             </select>
             <button type="submit">Edit Cat</button>
-        </form>
+        </form> -->
+        {{edit}}
 </body>
 </html>
